--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,12 +22,15 @@
     <string name="title_activity_trip">trip</string>
 
     <string-array name="drawer_menu">
-    <item>推播</item>
-    <item>訂閱</item>
-    <item>行程</item>
-    <item>登入</item>
+    <item>推薦</item>
+    <item>頻道</item>
+    <item>收藏庫</item>
+    <item>最近瀏覽</item>
     </string-array>
     <string name="title_activity_place">place</string>
     <string name="title_tripioneer_tour_listview">tripioneer_tour_listview</string>
-
+    <string name="action_refresh">重新整理</string>
+    <string name="action_edit">編輯</string>
+    <string name="action_search">搜尋</string>
+    <string name="action_info">軟體資訊</string>
 </resources>
