1.更改過的推播layout BUG: 頻道不見了(ˋˊ) 2.收藏庫layout 3.頻道需要另開一版原版的Adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
 
     <string-array name="drawer_menu">
     <item>推薦</item>
-    <item>頻道</item>
+    <item>訂閱</item>
     <item>收藏庫</item>
     <item>最近瀏覽</item>
     </string-array>
