每個都還有些問題(但都可以run看看) 一. activity_place_navigation是用來景點的導航，搭配Place_navigation.java 二.activity_roadplan是行程中所有景點的路線規劃，搭配main_road.java 三.activity_map是行程中景點置換的附近搜尋，搭配place_replace.java 四.activity_nearsearch是action bar上的放大鏡(以自己位置搜尋附近的景點)，搭配Search.java(尚未做) 五.Map.java是拿來測試用的java檔 六.test.java檔我刪不掉~ PS.只有四的版面是完全錯的

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="action_edit">編輯</string>
     <string name="action_search">搜尋</string>
     <string name="action_info">軟體資訊</string>
+    <string name="title_activity_map">Map</string>
+    <string name="title_activity_nearsearch">Nearsearch_Map</string>
+    <string name="title_activity_place_api">place_api</string>
+    <string name="google_api_key">AIzaSyD4xbzcG5Jq43J7Ufm2jn9JBYWfWevuft0</string>
 </resources>
