1.行程新增完成 1_1BUG圖片不知為何沒load到(明天再說 我想睡覺) 2.FIX BUG:drawer打開時floating button浮現 3.FIX BUG:景點打開會先看到安平古堡
TODO:
1.阿秀幫忙把規劃隨著更動的行程而變
2.我明天要寫收藏

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <item>推薦</item>
     <item>訂閱</item>
     <item>收藏庫</item>
-    <item>最近瀏覽</item>
+    <item>快選行程</item>
     </string-array>
     <string name="title_activity_place">place</string>
     <string name="title_tripioneer_tour_listview">tripioneer_tour_listview</string>
